--- a/setup.sty
+++ b/setup.sty
@@ -1,12 +1,12 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{pgfplots}
-\pgfplotsset{compat=1.18}
 \usepackage{listings}
 \usepackage{enumitem}
 \usepackage{tikz}
 \usetikzlibrary{decorations.pathreplacing} % for angle arc
 \usetikzlibrary{angles, quotes, calc, positioning, trees} % for drawing angles
+\pgfplotsset{compat=1.18,width=10cm}
 \usepackage{tikz-cd}
 \usepackage{booktabs}
 \usepackage{cancel}
