--- a/setup.sty
+++ b/setup.sty
@@ -3,6 +3,7 @@
 \usepackage{pgfplots}
 \usepackage{listings}
 \usepackage{enumitem}
+\usepackage{textcomp}
 \usepackage{tikz}
 \usetikzlibrary{decorations.pathreplacing} % for angle arc
 \usetikzlibrary{angles, quotes, calc, positioning, trees} % for drawing angles
