--- a/Second Year/Algoritmi/Algoritmi.tex
+++ b/Second Year/Algoritmi/Algoritmi.tex
@@ -3038,7 +3038,9 @@ Definiamo una funzione $h$ in questo modo:
 dove $A$ è un numero reale positivo fissato. Cosa sta succedendo qui? Stiamo moltiplicando $k$ per $A$ e poi prendiamo la parte frazionaria di $ka$ e moltiplichiamo per $m$.
 Ci esce un numero compreso tra $0$ e $m$ escluso (e quindi che permette di contenere gli elementi dell'array). Quindi il valore della funzione di Hash dipende da $A$.
 Tuttavia come si sceglie il valore $A$? Il valore ideale di $A$ è $\frac{\sqrt{5}-1}{2}$, trovato da Knuth.
-Questo numero è molto vicino a $0.6180339887$ che è il numero aureo. Questo valore permette di avere una distribuzione uniforme degli elementi nell'array.
+Questo numero è molto vicino a $0.6180339887$ che è il numero aureo. Questo valore permette di avere una distribuzione uniforme degli elementi nell'array. Questo numero appare
+spesso in natura, ad esempio nelle conchiglie, nelle piante, nell'arte, nell'architettura, ecc. Questo numero è anche il rapporto tra due numeri della sequenza di Fibonacci.
+
 
 
 
