--- a/Second Year/Sistemi_Operativi/OperatingSystems.tex
+++ b/Second Year/Sistemi_Operativi/OperatingSystems.tex
@@ -1,8 +1,8 @@
 \documentclass[a4paper]{article}
 \usepackage{import}
 \input{../../setup.sty}
-\title{Operating Systems}
-\author{SETU - South East Technological University\\Imbriani Paolo - VR500437\\Professor Micheal McMahon}
+\title{Operating Systems Writeup}
+\author{SETU - South East Technological University\\Imbriani Paolo - W20114452\\Professor Micheal McMahon}
 
 \begin{document}
 
@@ -20,5 +20,16 @@
 
 \pagebreak
 
+\section{Practical 1 -  Commands}
 
+\textcolor{green}{lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed}
+\\
+lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed
+
+\begin{lstlisting}
+C:> DIR
+dsakldnakndsajdadnn
+dkasdjkandssd
+
+\end{lstlisting}
 \end{document}
