--- a/Second Year/IrishHeritage&Folklore/IHF.tex
+++ b/Second Year/IrishHeritage&Folklore/IHF.tex
@@ -44,4 +44,39 @@ You may remmeber several words for "fortress" from the previous lecture.
 Dùn and Ràth are two more words for "fortress". Dùn is often anglicised as "Doon" 
 and Ràth is often anglicised as "Rath". Waterford is called \textbf{Port Láirge} which means "fort of the Vikings". The Vikings established a settlement in Waterford in the 9th century.
 
+\section{Saint Brigid}
+
+The feast day Saint Bridget of Kildar, also called St Brigid of Ireland, Patron Saint of Ireland, is February 1st, which is traditionally the beginnning of spring in Ireland.
+The ancient celtic pagan feast is one of the quarter days of the year of the Celtic Calendar which marked the mid points between solstice dates, crucial days in the earth's journey around the sun.
+
+\subsection{Background}
+
+\begin{itemize}
+    \item As it happens, this Celtic feast that is so much part of Irish Culture, was associated with the Celtic Goddess.
+    \item Many Celtic feast days were adopted by the early Christians and their associations with the Celtic Goddesses were transferred to the Christian Saints.
+    \item St. Brigid is associated with the Celtic Goddess Brigid.
+    \item Her hermitage there was known as KillDara, "Church of the Oak".
+    \item The customs associated with St. Brigid's Day are thought to have their origins in the pagan festival of Imbolc.
+    \item For example, every other day between St. Brigid Day and St. Patrick's Day is supposed to be a fair day, according to Irish Folklore.
+\end{itemize}
+
+\subsection{St. Brigid's Cross}
+
+In some parts of Ireland, children are still sent out on St. Bridget's Eve to pull up rushes which cannot be cut with a knife.
+When the rushes are brought into the house they are strewn on the floor and over the windows and doors.
+The crosses are made from rushes and are hung up in the house to protect the family from harm. They are made on January 31st, the are made from fresh rushes which are plentiful in Ireland.
+When you give a St. Brigid's Cross to someone, you are giving them a blessing.
+
+\subsection{Backstory}
+
+\begin{itemize}
+    \item Brigid was bord in 5h century Ireland
+    \item She embodies in herself the prechristian celtic and christian celtic spirit. 
+    \item Some scholars credit Brigid with pioneering monastic life in Ireland. 
+    \item She was a \textbf{woman of the land}, she associated fertility, spring and new life.
+    \item Bridig's spirit of hospitality is legendary. She is said to have fed the poor and the hungry.
+    \item She challenges both men and women today to create a church and a society where men and women are equally respected.
+    \item Brigid spread the values of Christ. Her life continues to sing the song of the Gospel. She continues to be remembered as an extraordinary woman of faith and to occupy an important place in the hearts of Ireland and far beyond.
+\end{itemize}
+
 \end{document}
