--- a/Second Year/Physics2/Physics2Report.tex
+++ b/Second Year/Physics2/Physics2Report.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper]{article}
 \usepackage{import}
 \input{../../setup.sty}
-\title{Physics 2 Report}
+\title{Physics 2 Reports}
 \author{SETU - South East Technological University\\Imbriani Paolo - W20114452\\Professor Joe Murphy}
 
 \begin{document}
@@ -30,21 +30,22 @@ by plotting a suitable graph.
 \\
 Table of measurements:
 
-\begin{center}
-    
+
+\begin{figure}[H]
+\centering
 \begin{tabular}{c|c|c|c|c|c}
     \textbf{V (volt)} & \textbf{I (Ampere)} & \textbf{t (s)} & \textbf{Temp (°C)} & \textbf{$\Delta$ T} & \textbf{Q (mc$\Delta$ T)} \\
     \hline
     0 & 0 & 0 & 17 & 0 & 0\\
-    8.34 & 1.34 & 120 & 20.5 & 3.5 & 2702.16\\
-    8.34 & 1.34 & 240 & 27 & 10 & 5404.32\\
-    8.34 & 1.38 & 360 & 35 & 18 & 8106 \\
-    8.4 & 1.38 & 480 & 43 & 26 &  10808\\
-    8.3 & 1.38 & 600 & 51 & 34 & 13510.8\\
-    
+    8.34 & 2.7 & 120 & 20.5 & 3.5 & 2702.16\\
+    8.34 & 2.7 & 240 & 27 & 10 & 5404.32\\
+    8.34 & 2.7 & 360 & 35 & 18 & 8106 \\
+    8.4 & 2.7 & 480 & 43 & 26 &  10808\\
+    8.3 & 2.7 & 600 & 51 & 34 & 13510.8\\
 \end{tabular}
+\caption{Table of measurements}
+\end{figure}
 
-\end{center}
 
 
 \begin{figure}[H]
@@ -109,8 +110,19 @@ Table of measurements:
           \end{tikzpicture}
           \caption{Graph of Q against $\Delta T$}
         \end{figure}
-    \noindent
+    \subsection{Questions}
+    \begin{enumerate}
+        \item \textbf{In your opinion, is it important that the block is well insulated during the experiment? Why?}
+        It is important since proper insulation ensures that most of 
+        the electrical energy supplied to the block is used to increase its temperature rather than 
+        being lost to the surroundings.
+        \item \textbf{If you were to increase the current (A) used in this experiment, to a value higher than you used, would it change the experiment in any way? Give reasons as to your answer.}
+        Yes, increasing the current beyond 2.7 Ampere, would change the experiment. The rate of heating would increase, and the temperature of the block would increase more rapidly. This would make it more difficult to measure the temperature accurately and to record the data in a timely manner.
+        \item \textbf{What is the function of the big variable resistor (rheostat) in this experiment? Give reasons as to you answer.}
+        The big variable resistor (rheostat) is used to control the current flowing through the circuit. By adjusting the resistance of the rheostat, the current can be adjusted to the desired value. This allows the rate of heating of the block to be controlled and the temperature changes to be measured accurately.
+    \end{enumerate}
+
     \subsection{Conclusion}
     We found the slope coeffienct which 379,9975. We just divide the slope by the mass of the material to get the specific heat capacity of the material. The specific heat capacity of the material is 385 J/kg°C. Which exactly matches \textbf{the specific heat capacity of the material we were testing.}
-    \\
+
 \end{document}
