update Operating Systems

--- a/setup.sty
+++ b/setup.sty
@@ -12,6 +12,7 @@
 \usepackage{booktabs}
 \usepackage{cancel}
 \usepackage{amsmath}
+\usepackage{minted}
 \usepackage{csquotes}
 \usepackage{gensymb}
 \usepackage{forest}
