--- a/Second Year/IrishHeritage&Folklore/IHF.tex
+++ b/Second Year/IrishHeritage&Folklore/IHF.tex
@@ -81,4 +81,38 @@ When you give a St. Brigid's Cross to someone, you are giving them a blessing.
     \item Brigid spread the values of Christ. Her life continues to sing the song of the Gospel. She continues to be remembered as an extraordinary woman of faith and to occupy an important place in the hearts of Ireland and far beyond.
 \end{itemize}
 
+\section{Celtic Ireland}
+
+\begin{itemize}
+    \item Celtic period immediately preceeds the Christian period in Ireland.
+    \item Celts travelled across the European continent.
+    \item In Ireland since c. 500 BC 
+    \item Irish language derived from a Celtic language
+\end{itemize}
+
+\subsection{The Celts}
+
+\begin{itemize}
+    \item The Celts had a reputation for being strong, vicious warriors.
+    \item Central to many of the stories of Irish mythology.
+    \item Living in small groups, mini kingdoms: tuatha.
+    \item Rural and agricultural, no town or big settlements
+    \item Druids were the priests and judges.
+    \item Raiding and plundering across the sea
+\end{itemize}
+
+
+\begin{itemize}
+    \item The Celts were a warrior society.
+    \item 
+\end{itemize}
+
+Who were the Celts? 
+What do you find interesting about the Celts?
+How wopuld you describe the Celtics society? 
+Do you think anything remains of the Celtics period in today's Ireland?
+What is your opinion of the Celtic legends we have read?
+What do you think the passage graves, circle tombs etc. were used for?
+
+
 \end{document}
