--- a/Second Year/Physics2/Physics2Report.tex
+++ b/Second Year/Physics2/Physics2Report.tex
@@ -138,7 +138,7 @@ As in Lab manual.
     \subsection{Conclusion}
     We found the slope coeffienct which 379,9975. We just divide the slope by the mass of the material to get the specific heat capacity of the material. The specific heat capacity of the material is 385 J/kg°C. Which exactly matches \textbf{the specific heat capacity of the material we were testing.}
 
-\section{Lab 2 - Calibration of a Thermocouple, 11/02/2025}
+\section{Exp 3 - Calibration of a Thermocouple, 11/02/2025}
 
 \subsection{Theory}
 
@@ -229,7 +229,5 @@ Use the thermocouple and the calibration graph to estimate:
     \item b. Body Temperature $\rightarrow$ 37°C $\rightarrow (37 * 0.04) - 0.2114 = 1.2686$
     \item c. The temperature of water from the tap in the lab $\rightarrow 17.5$ °C $(17.5 * 0.04) - 0.2114 = 0,4886 $ 
 \end{itemize}
-    
-
 
 \end{document}
